k8s/ingress/dev-tools.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog
  namespace: dev-tools
spec:
  ingressClassName: nginx
  rules:
    - host: dev-tools.mailhog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailhog
                port:
                  name: http
