k8s/ingress/ingress-staging.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-ing
  namespace: staging-ns
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: staging.booking-app.com
      http:
        paths:
          - path: /api/accounts/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: accounts-service-srv
                port:
                  number: 80
          - path: /api/trips/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: trips-service-srv
                port:
                  number: 80
